Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
We currently return 200 (OK) when a POST to /reserve, /unreserve, /create-volumes, and /destroy-volumes is validated successfully. This is misleading, because the underlying operation is still dispatched asynchronously and might subsequently fail. It would be more accurate to return 202 (Accepted) instead.
Attachments
Issue Links
- is related to
-
MESOS-4421 Document that /reserve, /create-volumes endpoints can return misleading "success"
- Resolved