docs/endpoints/master/create-volumes.md
@@ -12,7 +12,7 @@ layout: documentation
 Create persistent volumes on reserved resources.
 
 ### DESCRIPTION ###
-Returns 200 OK if the request was accepted. This does not
+Returns 202 Accepted if the request was accepted. This does not
 imply that the volume was created successfully: volume
 creation is done asynchronously and may fail.
 
